Fix bug with menu on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@
 body {
   font-family: "Montserrat";
   font-size: 10px;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .header {
