--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -3,7 +3,7 @@
 body {
   font-family: "Montserrat";
   font-size: 10px;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .header {
